/*
 * $Id: ChangeLog,v 1.4058 2005/04/21 23:23:55 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-04-22 06:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    + the order/tag selection is SIX compatible when compiled in
      SIXCDX and COMIX compatible in DBFCDX

  * xharbour/source/rdd/dbcmd.c
    ! fixed recently reported problem in __DBLOCATE and some others
      I've found. I cut 80% percent of code from this function - I hope
      that I haven't introduced new ones.

  * xharbour/source/rdd/workarea.c
    * simplified hb_waEval() method

2005-04-21 16:23 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/harbinit.prg
    + Added __BreakBlock()
  * source/vm/errorapi.c
    * Generate a R/T error if ErrorBlock() is called within a TRY/END code
      or use hb_vm_BreakBlock if HB_USE_BREAKBLOCK is defined.
  * source/vm/hvm.c
    + Added PHB_ITEM hb_vm_BreakBlock if HB_USE_BREAKBLOCK is defined
    + Added initialization of hb_vm_BreakBlock in hb_vmDoInitClip()
      if HB_USE_BREAKBLOCK is defined
    ! Fixed call to hb_vmDoInitClip() to PRECEDE call to hb_vmDoInitStatics(),
      or else any error in statics assignments code doesn't have any error handler.

2005-04-21 17:51 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/vm/arrayshb.c
    + Function RASCAN (Reverse AScan) added.

2005-04-21 21:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * force fixed start record for whole database indexes

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    * implemented RT error for some type of currupted indexes.

  * xharbour/source/rdd/hsx/hsx.c
    + added emulation of exclusive mode for POSIX systems
      (the same trick as for DBF)
    ! fixes sent by Andy. Thanks.
